--- a/ui/src/components/styles/BlueprintView.css
+++ b/ui/src/components/styles/BlueprintView.css
@@ -2,5 +2,5 @@
   height: auto;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
